[refactored] code
